--- a/pom.xml
+++ b/pom.xml
@@ -42,4 +42,43 @@
     	<version>1.7.25</version>
     </dependency>
   </dependencies>
+<build>
+<plugins>
+<plugin>
+<artifactId>maven-assembly-plugin</artifactId>
+<executions>
+<execution>
+<phase>package</phase>
+<goals>
+<goal>single</goal>
+</goals>
+</execution>
+</executions>
+<configuration>
+<descriptorRefs>
+<!-- This tells Maven to include all dependencies -->
+<descriptorRef>jar-with-dependencies</descriptorRef>
+</descriptorRefs>
+<archive>
+<manifest>
+<mainClass>urjc.isi.prueba.Main</mainClass>
+</manifest>
+</archive>
+</configuration>
+</plugin>
+<plugin>
+<groupId>com.heroku.sdk</groupId>
+<artifactId>heroku-maven-plugin</artifactId>
+<version>0.4.4</version>
+<configuration>
+<jdkVersion>1.8</jdkVersion>
+<appName>spark-example-felipecordente</appName>
+<processTypes>
+<!-- Tell Heroku how to launch your application -->
+<web>java -jar ./target/prueba-0.0.1-jar-with-dependencies.jar</web>
+</processTypes>
+</configuration>
+</plugin>
+</plugins>
+</build>
 </project>
